# OpenGL-Project-1

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  project.sh
mazes/: level_1.txt
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: CMakeLists.txt  Main.cpp
src/FileUtils/: CMakeLists.txt  Reading.cpp
src/GLWraps/: BufferObjs.cpp  CMakeLists.txt  ColorUtils.cpp  Mesh.cpp  Renderer.cpp  ShaderUtils.cpp  Window.cpp
src/Game/: Board.cpp  CMakeLists.txt  Game.cpp  LevelLoader.cpp
src/Includes/AppCtrl/: KeyData.hpp
src/Includes/FileUtils/: Reading.hpp
src/Includes/GLWraps/: BasicTypes.hpp  BufferObjs.hpp  ColorUtils.hpp  Mesh.hpp  Renderer.hpp  ShaderUtils.hpp  Uniform.hpp  Window.hpp
src/Includes/Game/: Board.hpp  Game.hpp  LevelLoader.hpp
